// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing ToSetRolePosition operation should fail due to newPosition is not a number 1`] = `
Object {
  "message": "    
    expected: position option to be a number
    received: string
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should fail due to undefined roleIdentifier 1`] = `
Object {
  "message": "    
    expected: data to identifier the role (id or name)
    received: null
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should find and must return passed report due to 'changed position' (isNot true) 1`] = `
Object {
  "pass": true,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should not find a role and must return not passed (isNot false) 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should not find a role and must return not passed (isNot true) 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should not find a role and return a failed report 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should return a failed report due to timeout and isNot false 1`] = `
Object {
  "message": "    
    expected: role position to change to -2
    received: position didn't change
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should return a failed report position setted was different than expected 1`] = `
Object {
  "message": "    
    expected: role position to change to -2
    received: 1
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should return a not passed test due to new position be higher than the permitted (isNot false) 1`] = `
Object {
  "message": "    
    expected: position to be >= 0 and <= 1 (max value possible)
    received: 2
",
  "pass": false,
  "testName": "toSetRolePosition",
}
`;

exports[`testing ToSetRolePosition operation should return a passed report due to timeout and isNot true 1`] = `
Object {
  "pass": true,
  "testName": "toSetRolePosition",
}
`;
